slider catcard featues added

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
+    "infinite-react-carousel": "^1.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
